# Neme

./: .gitignore  .pre-commit-config.yaml  DECISIONS.md  DOMAIN_MODEL.md  MEMORY.md  README.md  V1_SCOPE.md  VISION.md  neme.py
.github/workflows/: ci.yml  pre-commit.yml
backend/: README.md  pyproject.toml  test_regex.py
backend/alembic/: env.py
backend/alembic/versions/: 41821db1ba44_initial_schema.py  8b1d61d99c48_add_system_settings_table.py  bd4b8734f2b6_add_users_data_to_splitwiseexpense.py  f92aebafde1f_add_is_edited_to_transactions.py
backend/app/: api_reconciliation.py  database.py  heuristics.py  import_engine.py  main.py  models.py  splitwise.py  sync.py
backend/app/parsers/: axis.py  base.py  hsbc.py  icici.py  mt940.py  utils.py
backend/scripts/: clean_db.py  reset_state.py  seed_test_db.py
backend/tests/: test_smoke.py
docs/: BANK_PARSERS.md  MEMORY.md  architecture.md  decisions.md  domain-model.md  v1-scope.md  vision.md
frontend/: README.md  eslint.config.js  index.html  lint.txt  package-lock.json  package.json
frontend/src/: App.tsx  ConflictReviewModal.tsx  EditExpenseModal.tsx  EditTransactionModal.tsx  QuickCreateModal.tsx  UploadModal.tsx  index.css
